--- a/hello-yarn/server/package.json
+++ b/hello-yarn/server/package.json
@@ -1,22 +1,12 @@
 {
-  "name": "hello-yarn",
-  "version": "0.1.0",
-  "description": "How to Build a Todo App with React, TypeScript, NodeJS, and MongoDB",
-  "main": "app.js",
-  "repository": "https://github.com/jlucktay/typescript-workbench/tree/main/hello-yarn",
   "author": "James Lucktaylor",
-  "license": "MIT",
-  "private": false,
-  "scripts": {
-    "build": "tsc",
-    "start": "concurrently \"tsc -w\" \"nodemon dist/js/app.js\""
-  },
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.11.17",
     "typescript": "^4.1.5"
   },
+  "description": "How to Build a Todo App with React, TypeScript, NodeJS, and MongoDB",
   "devDependencies": {
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
@@ -24,5 +14,15 @@
     "@types/node": "^14.14.31",
     "concurrently": "^5.3.0",
     "nodemon": "^2.0.7"
-  }
+  },
+  "license": "MIT",
+  "main": "app.js",
+  "name": "hello-yarn-server",
+  "private": true,
+  "repository": "https://github.com/jlucktay/typescript-workbench/tree/main/hello-yarn/server",
+  "scripts": {
+    "build": "tsc",
+    "start": "concurrently \"tsc -w\" \"nodemon dist/js/app.js\""
+  },
+  "version": "0.1.0"
 }
