style(vscode): hide 'node_modules' directories

--- a/hello-yarn/.vscode/settings.json
+++ b/hello-yarn/.vscode/settings.json
@@ -1,3 +1,11 @@
 {
-  "editor.defaultFormatter": "esbenp.prettier-vscode"
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "files.exclude": {
+    "**/.DS_Store": true,
+    "**/.git": true,
+    "**/.hg": true,
+    "**/.svn": true,
+    "**/CVS": true,
+    "**/node_modules": true
+  }
 }
