--- a/create-react-app/package.json
+++ b/create-react-app/package.json
@@ -12,10 +12,10 @@
     ]
   },
   "dependencies": {
+    "@testing-library/dom": ">=7.21.4",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "@testing-library/dom": ">=7.21.4",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
@@ -23,6 +23,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.2",
+    "source-map-explorer": "^2.5.2",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
@@ -33,7 +34,6 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jest": "^24.0.1",
-    "jest": "^26.4.2",
     "prettier": "2.1.1",
     "ts-jest": "^26.3.0"
   },
@@ -52,17 +52,14 @@
       "prettier",
       "prettier/@typescript-eslint",
       "react-app",
-      "react-app/jest",
-      "shared-config"
+      "react-app/jest"
     ],
     "overrides": [
       {
         "files": [
           "**/*.ts?(x)"
         ],
-        "rules": {
-          "additional-typescript-only-rule": "warn"
-        }
+        "rules": {}
       }
     ],
     "parser": "@typescript-eslint/parser",
@@ -82,10 +79,9 @@
       "@typescript-eslint/prefer-for-of": "warn",
       "@typescript-eslint/triple-slash-reference": "error",
       "@typescript-eslint/unified-signatures": "warn",
-      "additional-rule": "warn",
       "comma-dangle": [
         "error",
-        "always-multiline"
+        "only-multiline"
       ],
       "constructor-super": "error",
       "eqeqeq": [
@@ -127,6 +123,7 @@
   "name": "create-react-app",
   "private": true,
   "scripts": {
+    "analyse": "source-map-explorer 'build/static/js/*.js'",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
     "start": "react-scripts start",
